# QtAmazonAI

./: .gitignore  Board.cpp  CMakeLists.txt  MainWindow.cpp  README.md  main.cpp  resources.qrc
include/: Board.h  MainWindow.h
output/: log.txt
